--- a/client/src/index.css
+++ b/client/src/index.css
@@ -51,7 +51,9 @@ button:hover {
 }
 button:focus,
 button:focus-visible {
-    outline: 4px auto -webkit-focus-ring-color;
+    outline-width: 4px;
+    outline-style: auto;
+    outline-color: #646cff;
 }
 
 @media (prefers-color-scheme: light) {
