--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,12 +16,6 @@
     z-index: 1000;
 }
 
-.logo-title-container svg {
-    width: 100%; /* Hace el logo responsivo */
-    max-width: 250px; /* Tamaño máximo del logo */
-    overflow: visible; /* Permite que los elementos se vean mientras se animan */
-}
-
 /* Contenedor para el logo y el título dentro del encabezado */
 .logo-title-container {
     display: flex;
@@ -143,7 +137,7 @@
     border-width: 0;
 }
 
-/* --- ANIMACIONES DEL LOGOTIPO SVG --- */
+/* --- ANIMACIONES DEL LOGOTIPO --- */
 
 /* Animación de Resplandor/Pulso para la Diple Izquierda (Sabio) */
 @keyframes diple-left-glow {
@@ -205,7 +199,7 @@
     }
 }
 
-/* Aplicar animaciones a las partes del SVG */
+/* Aplicar animaciones a las partes del logotipo */
 .site-logo .diple-left-shape {
     animation: diple-left-glow 3s ease-in-out infinite alternate;
     animation-delay: 0s;
